Fix disclosure triangle rendering as emoji on mobile Safari

--- a/html/mattjamesmartin.scss
+++ b/html/mattjamesmartin.scss
@@ -657,6 +657,20 @@ pre.text, pre.sourceCode, .cell-output pre {
                 font-weight: $font-weight-medium;
                 color: $garnet;
                 cursor: pointer;
+                list-style: none;
+
+                &::-webkit-details-marker {
+                    display: none;
+                }
+
+                &::before {
+                    content: "▸ ";
+                    display: inline;
+                }
+            }
+
+            &[open] > summary::before {
+                content: "▾ ";
             }
 
             p {
